✨ Mejoras SEO, routing /admin, y optimización del menú
- Simplificado menú de navegación (Inicio, Servicios, Contacto)
- Removido botón admin del header público
- Agregado routing /admin para acceso administrativo
- Actualizado título: HHBC Consulting Group, Chile
- Implementado SEO completo con meta tags
- Creado sitemap.xml y robots.txt
- Agregados datos estructurados Schema.org
- Corregidos imports circulares en backend
- Inicializada base de datos SQLite
- Configuración nginx para SPA routing

--- a/nginx.conf
+++ b/nginx.conf
@@ -37,7 +37,7 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         
-        # Handle client-side routing
+        # Handle client-side routing - IMPORTANTE para /admin
         location / {
             try_files $uri $uri/ /index.html;
         }
