--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ api/*.db
 # Variables de entorno
 .env
 .env.local
+.env.production
+.env.*.local
 
 # IDEs
 .vscode/
@@ -36,10 +38,12 @@ api/*.db
 .DS_Store
 Thumbs.db
 
-# Certificados
+# Certificados y claves
 *.pem
 *.key
 *.crt
+*.p12
+*.pfx
 
 # Python
 __pycache__/
@@ -47,3 +51,22 @@ __pycache__/
 *$py.class
 *.so
 .Python
+
+# Configuraciones nginx (sensibles)
+*.conf
+!vite.config.ts
+
+# Docker
+docker-compose.override.yml
+.dockerignore
+
+# Archivos temporales
+*.tmp
+*.temp
+*.bak
+*.swp
+
+# Archivos de debug
+debug_*.js
+test_*.js
+diagnostic_*.js
